# MLOps-Labs

./: .gitignore  Makefile  data.dvc  dockerfile.mlflow  dvc.yaml  mlflow.db  models.dvc  params.yaml  prefect.yaml  pyproject.toml  requirements.txt  server.py  trainer.py
.dvc/: config
FirstProject/: LICENSE  README.md  trainer.py
FirstProject/conf/pipeline/: titanic2.yaml
FirstProject/models/: best_model.pkl  best_model2.pkl
FirstProject/notebooks/: Full_Pipeline.ipynb
FirstProject/src/training/: download_data.py  evaluate.py  process_data.py  train.py
conf/: config.yaml
conf/pipeline/: titanic.yaml
data/processed/: .gitignore  train-test.parquet  train-train.parquet
mlruns/0/: meta.yaml
mlruns/689201136122943751/: meta.yaml
mlruns/689201136122943751/05f37220751a4e3c83f89b170f0b1cc1/: meta.yaml
mlruns/689201136122943751/16b510fac5dc4379b6bed030009c7533/: meta.yaml
mlruns/689201136122943751/37abe71d4ca54678aae83d811df09ea6/: meta.yaml
mlruns/689201136122943751/7ca68e3425714db592861789b72a7a51/: meta.yaml
mlruns/689201136122943751/80998ca86637458eb6a36392d511000e/: meta.yaml
mlruns/689201136122943751/872e7d4d90a54a73b9e5a215c5d734e5/: meta.yaml
mlruns/689201136122943751/92f6356a57a14a2da471027449253e44/: meta.yaml
mlruns/689201136122943751/9d9b380c61ef4227bbc16de55efa4b29/: meta.yaml
mlruns/689201136122943751/c5e6f22146f349da8f19b0a780d9b80d/: meta.yaml
mlruns/689201136122943751/dbfcc017c5c0404d8c45f3712f646ca8/: meta.yaml
reports/: .gitignore  metrics.json  metrics2.json
src/training/: evaluate.py  process_data.py  train.py
(+318 files in other folders)
