[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "FirstProject"
version = "0.0.1"
description = "First Project MLOps"
authors = [
  { name = "KenzyEssam" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
]
requires-python = "==3.14.2"


[tool.ruff]
line-length = 99
src = ["FirstProject"]
include = ["pyproject.toml", "FirstProject/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["FirstProject"]
force-sort-within-sections = true

